remove analytics / edit footer

--- a/themes/Saga/partials/footer.hbs
+++ b/themes/Saga/partials/footer.hbs
@@ -2,7 +2,7 @@
 </section>
 <section class="bottom">
   <section class="attribution">
-    <section class="poweredby">Published with <a class="icon-ghost" href="http://hubpress.io">HubPress</a></section>
-    <a href="http://github.com/Reedyn/Saga">Built with <i class="fa fa-heart"></i> and Free and Open-Source Software</a>.
+    <section class="poweredby">Publié grâce au projet <a class="icon-ghost" href="http://hubpress.io">HubPress</a></section>
+    <a href="http://github.com/Reedyn/Saga">Développé avec <i class="fa fa-heart"></i> gratuitement et avec des logiciels Open-Source</a>.
   </section>
 </section>
